# WaveSim

./: CMakeLists.txt  LICENSE  README.md
include/: Renderer.h  Wave1D.h  Wave1DInteract.h  Wave2D.h
src/: Renderer.cpp  Wave1D.cpp  Wave1DInteract.cpp  Wave2D.cpp  main.cpp
